Added Science Table of Contents

--- a/pages/blueprint.html
+++ b/pages/blueprint.html
@@ -71,7 +71,7 @@
                               all targeting different variants of EGFR exon 19, 20 and 21. They just started a third franchise around Breast 
                               Cancer with a CDK2 inhbitor. All of these are large areas of oncology.
                               Their main focus has been on kinases that drive cell growth
-                              in cancer. They use mostly small molecule inhibitors, but recently started looking as protein degraders.
+                              in cancer. They use mostly small molecule inhibitors, but recently started looking at protein degraders.
                          </p>
                     </section>  
 
