--- a/pages/companies.html
+++ b/pages/companies.html
@@ -135,20 +135,33 @@
                          <li class="tech-list">
                               <a href="../pages/kymera.html">Kymera Therapeutic (KYMR)</a>
                          </li>
-                         <li class="tech-list">Mirati Therapeutics</li>
-                         <li class="tech-list">Revolution Medicines</li>
-                         <li class="tech-list">Monte Rosa Therapeutics</li>
+                         <li class="tech-list">
+                              <a href="../pages/mirati.html">Mirati Therapeutics (MRTX)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/revolution.html">Revolution Medicines (RVMD)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/monterosa.html">Monte Rosa Therapeutics (GLUE)</a>
+                         </li>
                     </ol>
                </section>  
 
                <section>
                     <h2 class="list-header">Private CRISPR Companies</h2>
                     <ol>
-                         <li class="tech-list">Mammoth Biosciences</li>
-                         <li class="tech-list">Arbor Biotech</li>
-                         <li class="tech-list">Scribe Therapeutics</li>
-                         <li class="tech-list">Sherlock Biosciences</li>
-                         <li class="tech-list">Inscripta</li>
+                         <li class="tech-list">
+                              <a href="../pages/mammoth.html">Mammoth Biosciences</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/abor.html">Arbor Biotech</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/scribe.html">Scribe Therapeutics</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/sherlock.html">Sherlock Biosciences</a>
+                         </li>
                     </ol>
                </section>  
 
