--- a/pages/kymera.html
+++ b/pages/kymera.html
@@ -127,7 +127,7 @@
                               Cash $560 million
                          </p>
                          <p class="profiles">
-                              KT-474 has serveral indications in which it can show efficacy. Just based on the 2 idciations 
+                              KT-474 has serveral indications in which it can show efficacy. Just based on the 2 indications 
                               it showed data on in phase 1, I think it could easily do $1 billion in sales if the data continues 
                               to do well or improves. There are even more indications in which it could be successful. I would give
                               this and 1x multipier as they do have full phase 1 data now. That gives them $1 billion in value. 
@@ -139,7 +139,7 @@
                          </p>
                          <p class="profiles">
                               KT-333 could have really big potential if it works out well in Fibrotic disease and oncology. I would venture 
-                              a guess of $2 billion or more. It would depend on the data. I would give this .1 multiplier since its still early 
+                              a guess of $2 billion in sales. It would depend on the data. I would give this .1 multiplier since its still early 
                               in phase 1 with no data. That makes it worth $200 million value.
                          </p>
                          <p class="profiles">
