--- a/pages/science.html
+++ b/pages/science.html
@@ -57,7 +57,7 @@
 
                <div class="science-layout">
                     <section class="science-topic">
-                         <h2 class="section-title">Cell Signaling</h2>
+                         <h2 class="section-title"><a href="../learning/signaling.html">Cell Signaling</a></h2>
                          <div class="science-list">
                          <ul class="list-align">
                               <li>
