--- a/learning/signaling.html
+++ b/learning/signaling.html
@@ -55,7 +55,7 @@
 
           <main>
 
-               <h1 class="science-header">Cell Signaling</h1>
+               <h1 class="science-list">Cell Signaling</h1>
 
                <h2 id="growth" class="title-head">Growth Receptors</h2>
 
