Fixed Science Style

--- a/learning/signaling.html
+++ b/learning/signaling.html
@@ -55,140 +55,164 @@
 
           <main>
 
-               <h1 class="science-list">Cell Signaling</h1>
+               <h1 class="science-headers">Cell Signaling</h1>
 
-               <h2 id="growth" class="title-head">Growth Receptors</h2>
+               <div class="science-container">
 
-               <section class="science-layout">
-                    <p>
-                         Cell replication is a highly controlled process and uncontrolled cell replication leads to 
-                         cancer. Some cells replicate often while others never do. The type of cell determines when 
-                         and how often it replicates. Some cells like GI tract and immune cells replicate often. They 
-                         have a very high turnover rate. Many cells only replicate when necessary. This happens when 
-                         their is damage or injury that destroys those cells. Then new cells are created to replace the 
-                         missing cells. 
-                    </p>
-                    <p>     
-                         The basis of the process is one cell creates a growth factor in response to 
-                         injury or an event. The growth factor binds to the growth receptor on another cell which then begins
-                         the process of replication.
-                         The growth receptor is the first place where genetic mutations can cause cancer. The receptors 
-                         are proteins that are encoded in the DNA. Mutations in that protein receptor can alter its 
-                         function. Some mutations lead to an always on effect of the growth receptor. This means the 
-                         receptor no longer needs the growth factor to become active. Other mutations lead to many copies 
-                         of the growth receptor. This causes over stimulation of the cell to replicate. Every cell has a 
-                         growth factor receptor, but not every cell has the same growth factor receptor. 
-                    </p>
-                    <p>     
-                         Growth receptors 
-                         come in families. These families will be used in different tissues. That way a growth signal from 
-                         one tissue doesn't stimulate growth in another tissue. Some tissues will share some of the same growth 
-                         receptor families. This is why you will see them in specific types of cancer. 
-                    </p>
-                    <p>     
-                         The first major 
-                         growth receptor is the EGFR family which plays a major role in lung cancer and a smaller role 
-                         in other cancers like glioma or Head & Neck cancer. EGFR stands for Epidermal Growth Factor Receptor. 
-                         It is also known as Erb or HER (Human Epidermal Growth Receptor). These 3 names are used 
-                         interchangeably. In lung cancer EGFR makes up about 10% to 15% of the mutations. There are 4 isoforms 
-                         of EGFR which are EGFR 1-4 or HER 1-4. When in lung cancer, we call it EGFR. In breast cancer HER2 
-                         makes up about 15% to 20% of breast cancer. There are 2 very common mutations in EGFR lung cancer 
-                         to help develop understanding of how mutations in the receptor can cause cancer. The first is the 
-                         Exon 19 deletion EGFR cancers. They make up about 47% of the EGFR mutations in lung cancer. The other 
-                         major mutation is the Exon 21 L858R substitution mutation. There is another 12% that makes up many 
-                         other smaller mutations. There are drugs developed to target the blocking of the EGFR receptor.
-                         This helps stop the aberrant signaling that drives cancer. Often treatment with a drug targeting 
-                         these mutations leads to new mutations which get around the inhibition of the drug. For example, 
-                         EGFR inhibitors often lead to T797M mutations. This leads to resistance. 
-                    </p>
-                    <p>     
-                         Next up is VEGFR which 
-                         stands for Vascular Endothelial Growth Factor Receptor. There are 4 isoform so this from VEGFR 1-4. 
-                         They have different roles in different areas of the vasculature. VEGFR inhibitors have a role in wet 
-                         AMD to block new blood vessel formation. Its been used in oncology to block new blood vessel formation 
-                         that helps cancer grow. 
-                    </p>
-                    <p>     
-                         Another growth factor receptor is FGFR. It stand for Fibroblast Growth 
-                         Factor Receptor. This one comes with a high level of toxicity as it affects things like the skin. 
-                         There are some FGFR inhibitors out there, but they tend to have high toxicity. I know Relay is working 
-                         on a FGFR2 inhibitor that is designed with low toxicity developed using AI and ML. This is in clinical 
-                         development for Cholangiocarcinoma and some other FGFR mutant cancers.
-                    </p>
-                    <p>     
-                         Another important growth receptor 
-                         is the PDGFR. This stands for Platelet Derived Growth Factor Receptor. This has a role GI cancers.
-                         These are some of the major growth factor receptors that can mutate and cause cancer in various tissues.
-                         There are some smaller ones like MET, KIT, ROS1 and ALK. These tend to play a role in some cancers 
-                         like MET in Kidney cancer. KIT plays a role in Systemic Mastocytosis and Blueprint is working on drugs
-                         for this proliferation disorder of mast cells. ROS1 and ALK play a role in lung cancer for growth receptors.
-                         Another small one is NTRK which is a growth receptor in Neurological cancers. 
-                    </p>
-                    <p>     
-                         Some of the mutations in these 
-                         growth receptors are single base substitutions. Others are amplifications where the gene is copied many 
-                         times. Others are rearrangements of the gene. Some are fusions of two genes. There are many ways these 
-                         receptors can mutate that lead to over activation of the growth pathways. Blocking that signaling can 
-                         help fight these cancers. Next we will look at the 2 major growth pathways these growth receptors 
-                         activate no matter which cell the receptor belongs to. There are many growth receptors, but a few key 
-                         pathways they activate.
-                    </p>
-               
-               </section>
+                    <h2 class="science-headers" id="growth">Growth Receptors</h2>
 
-               <h2 class="title-head">Growth Pathways Overview</h2>
+                    <section>
+                         <p>
+                              Cell replication is a highly controlled process and uncontrolled cell replication leads to 
+                              cancer. Some cells replicate often while others never do. The type of cell determines when 
+                              and how often it replicates. Some cells like GI tract and immune cells replicate often. They 
+                              have a very high turnover rate. Many cells only replicate when necessary. This happens when 
+                              their is damage or injury that destroys those cells. Then new cells are created to replace the 
+                              missing cells. 
+                         </p>
+                         <p>     
+                              The basis of the process is one cell creates a growth factor in response to 
+                              injury or an event. The growth factor binds to the growth receptor on another cell which then begins
+                              the process of replication.
+                              The growth receptor is the first place where genetic mutations can cause cancer. The receptors 
+                              are proteins that are encoded in the DNA. Mutations in that protein receptor can alter its 
+                              function. Some mutations lead to an always on effect of the growth receptor. This means the 
+                              receptor no longer needs the growth factor to become active. Other mutations lead to many copies 
+                              of the growth receptor. This causes over stimulation of the cell to replicate. Every cell has a 
+                              growth factor receptor, but not every cell has the same growth factor receptor. 
+                         </p>
+                         <p>     
+                              Growth receptors 
+                              come in families. These families will be used in different tissues. That way a growth signal from 
+                              one tissue doesn't stimulate growth in another tissue. Some tissues will share some of the same growth 
+                              receptor families. This is why you will see them in specific types of cancer. 
+                         </p>
+                         <p>     
+                              The first major 
+                              growth receptor is the EGFR family which plays a major role in lung cancer and a smaller role 
+                              in other cancers like glioma or Head & Neck cancer. EGFR stands for Epidermal Growth Factor Receptor. 
+                              It is also known as Erb or HER (Human Epidermal Growth Receptor). These 3 names are used 
+                              interchangeably. In lung cancer EGFR makes up about 10% to 15% of the mutations. There are 4 isoforms 
+                              of EGFR which are EGFR 1-4 or HER 1-4. When in lung cancer, we call it EGFR. In breast cancer HER2 
+                              makes up about 15% to 20% of breast cancer. There are 2 very common mutations in EGFR lung cancer 
+                              to help develop understanding of how mutations in the receptor can cause cancer. The first is the 
+                              Exon 19 deletion EGFR cancers. They make up about 47% of the EGFR mutations in lung cancer. The other 
+                              major mutation is the Exon 21 L858R substitution mutation. There is another 12% that makes up many 
+                              other smaller mutations. There are drugs developed to target the blocking of the EGFR receptor.
+                              This helps stop the aberrant signaling that drives cancer. Often treatment with a drug targeting 
+                              these mutations leads to new mutations which get around the inhibition of the drug. For example, 
+                              EGFR inhibitors often lead to T797M mutations. This leads to resistance. 
+                         </p>
+                         <p>     
+                              Next up is VEGFR which 
+                              stands for Vascular Endothelial Growth Factor Receptor. There are 4 isoform so this from VEGFR 1-4. 
+                              They have different roles in different areas of the vasculature. VEGFR inhibitors have a role in wet 
+                              AMD to block new blood vessel formation. Its been used in oncology to block new blood vessel formation 
+                              that helps cancer grow. 
+                         </p>
+                         <p>     
+                              Another growth factor receptor is FGFR. It stand for Fibroblast Growth 
+                              Factor Receptor. This one comes with a high level of toxicity as it affects things like the skin. 
+                              There are some FGFR inhibitors out there, but they tend to have high toxicity. I know Relay is working 
+                              on a FGFR2 inhibitor that is designed with low toxicity developed using AI and ML. This is in clinical 
+                              development for Cholangiocarcinoma and some other FGFR mutant cancers.
+                         </p>
+                         <p>     
+                              Another important growth receptor 
+                              is the PDGFR. This stands for Platelet Derived Growth Factor Receptor. This has a role GI cancers.
+                              These are some of the major growth factor receptors that can mutate and cause cancer in various tissues.
+                              There are some smaller ones like MET, KIT, ROS1 and ALK. These tend to play a role in some cancers 
+                              like MET in Kidney cancer. KIT plays a role in Systemic Mastocytosis and Blueprint is working on drugs
+                              for this proliferation disorder of mast cells. ROS1 and ALK play a role in lung cancer for growth receptors.
+                              Another small one is NTRK which is a growth receptor in Neurological cancers. 
+                         </p>
+                         <p>     
+                              Some of the mutations in these 
+                              growth receptors are single base substitutions. Others are amplifications where the gene is copied many 
+                              times. Others are rearrangements of the gene. Some are fusions of two genes. There are many ways these 
+                              receptors can mutate that lead to over activation of the growth pathways. Blocking that signaling can 
+                              help fight these cancers. Next we will look at the 2 major growth pathways these growth receptors 
+                              activate no matter which cell the receptor belongs to. There are many growth receptors, but a few key 
+                              pathways they activate.
+                         </p>
 
-               <section id="overview" class="science-layout">
-                    Comming Soon
-               </section>
-
-               <h2 class="title-head">RAS Pathway</h2>
-
-               <section id="ras" class="science-layout">
-                    Comming Soon
-               </section>
-
-               <h2 class="title-head">mTOR Pathway</h2>
-
-               <section id="mtor" class="science-layout">
-                    Comming Soon
-               </section>
-
-               <h2 class="title-head">Cell Cycle</h2>
-
-               <section id="cycle" class="science-layout">
-                    Comming Soon
-               </section>
-
-               <h2 class="title-head">DNA Repair</h2>
-
-               <section id="repair" class="science-layout">
-                    Comming Soon
-               </section>
-
-               <h2 class="title-head">Wnt Signaling</h2>
-
-               <section id="wnt" class="science-layout">
-                    Comming Soon
-               </section>
-
-               <h2 class="title-head">T Cell Receptor</h2>
-
-               <section id="tcell" class="science-layout">
-                    Comming Soon
-               </section>
-
-               <h2 class="title-head">B Cell Receptor</h2>
-
-               <section id="bcell" class="science-layout">
-                    Comming Soon
-               </section>
-
-               <h2 class="title-head">TLR Signaling</h2>
-
-               <section id="tlr" class="science-layout">
+                         <p><a href="../pages/science.html">Back</a></p>
                     
-               </section>
+                    </section>
+
+                    <h2 class="science-headers" id="overview">Growth Pathways Overview</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+                    <h2 class="science-headers" id="ras">RAS Pathway</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+                    <h2 class="science-headers" id="mtor">mTOR Pathway</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+                    <h2 class="science-headers" id="cycle">Cell Cycle</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+                    <h2 class="science-headers" id="repair">DNA Repair</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+                    <h2 class="science-headers" id="wnt">Wnt Signaling</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+                    <h2 class="science-headers" id="tcell">T Cell Receptor</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+                    <h2 class="science-headers" id="bcell">B Cell Receptor</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+                    <h2 class="science-headers" id="tlr">TLR Signaling</h2>
+
+                    <section>
+                         Comming Soon
+
+                         <p><a href="../pages/science.html">Back</a></p>
+                    </section>
+
+               </div>
 
           </main>
 
