--- a/pages/science.html
+++ b/pages/science.html
@@ -57,9 +57,8 @@
 
                <div class="science-layout">
                     <section class="science-topic">
-                         <h2 class="section-title"><a href="../learning/signaling.html">Cell Signaling</a></h2>
-                         <div class="science-list">
-                         <ul class="list-align">
+                         <h2 class="science-list"><a href="../learning/signaling.html">Cell Signaling</a></h2>
+                         <ul>
                               <li>
                                    <a href="../learning/signaling.html#growth">Growth Receptors</a>
                               </li>
@@ -91,12 +90,10 @@
                                    <a href="../learning/signaling.html#tlr">TLR Signaling</a>
                               </li>
                          </ul>
-                    </div>
                     </section>
                     <section class="science-topic">
-                         <h2 class="section-title">Genetics</h2>
-                         <div class="science-list">
-                         <ul class="list-align">
+                         <h2 class="science-list">Genetics</h2>
+                         <ul>
                               <li>DNA Structure</li>
                               <li>DNA Packaging</li>
                               <li>Chromosomes</li>
@@ -116,12 +113,10 @@
                               <li>Sequencing SMRT Technology</li>
                               <li>Sequencing Nanopore Technology</li>
                          </ul>
-                    </div>
                     </section>
                     <section class="science-topic">
-                         <h2 class="section-title">CRISPR</h2>
-                         <div class="science-list">
-                         <ul class="list-align">
+                         <h2 class="science-list">CRISPR</h2>
+                         <ul>
                               <li>Intro to CRISPR</li>
                               <li>Types of CRISPR</li>
                               <li>CAS9</li>
@@ -134,12 +129,10 @@
                               <li>Prime Editing</li>
                               <li>PASTE Editing</li>
                          </ul>
-                    </div>
                     </section>
                     <section class="science-topic">
-                         <h2 class="section-title">Immunology</h2>
-                         <div class="science-list">
-                         <ul class="list-align">
+                         <h2 class="science-list">Immunology</h2>
+                         <ul>
                               <li>Antigens</li>
                               <li>Organs of Immune System</li>
                               <li>Innate vs Adaptive Immunity</li>
@@ -155,12 +148,10 @@
                               <li>T cells</li>
                               <li>B cells</li>
                          </ul>
-                    </div>
                     </section>
                     <section class="science-topic">
-                         <h2 class="section-title">Oncology</h2>
-                         <div class="science-list">
-                         <ul class="list-align">
+                         <h2 class="science-list">Oncology</h2>
+                         <ul>
                               <li>Chemotherapies</li>
                               <li>The Cell Cycle</li>
                               <li>What is Cancer?</li>
@@ -179,12 +170,10 @@
                               <li>Gamma/Delta T cells</li>
                               <li>iPSC cells</li>
                          </ul>
-                    </div>
                     </section>
                     <section class="science-topic">
-                         <h2 class="section-title">Hematology</h2>
-                         <div class="science-list">
-                         <ul class="list-align">
+                         <h2 class="science-list">Hematology</h2>
+                         <ul>
                               <li>Intro to Hematology</li>
                               <li>Iron Metabolism</li>
                               <li>Red Blood Cells</li>
@@ -207,7 +196,6 @@
                               <li>Defects of Hemostasis</li>
                               <li>Contact Activation System</li>
                          </ul>
-                    </div>
                     </section>
                </div>
           </main>
